
AC_INIT(pyabiword, 0.0.2)
AC_CONFIG_AUX_DIR(m4)
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_DISABLE_STATIC
AC_PROG_LIBTOOL
AC_STDC_HEADERS
AM_PROG_LIBTOOL
AC_C_CONST

PKG_CHECK_MODULES(ABIWORD, abiword-2.6)

# HACK to include all the stuff we need.
# Just so all the current whizzbang is not stopped by ever build breaking Rob.
AC_MSG_CHECKING([additional abiword includes])
abi_base_includedir=`pkg-config --variable=includedir abiword-2.6`"/abiword-2.6"
abi_sub_includes=" \
 -I ${abi_base_includedir}/ev/xp 	\
 -I ${abi_base_includedir}/ev/unix	\
 -I ${abi_base_includedir}/gr/xp	\
 -I ${abi_base_includedir}/gr/unix	\
 -I ${abi_base_includedir}/util/xp	\
 -I ${abi_base_includedir}/util/unix	\
 -I ${abi_base_includedir}/xap/xp	\
 -I ${abi_base_includedir}/xap/unix	\
 -I ${abi_base_includedir}/text/fmt/xp	\
 -I ${abi_base_includedir}/text/ptbl/xp	\
 -I ${abi_base_includedir}/spell/xp	\
 -I ${abi_base_includedir}/ap/xp	\
 -I ${abi_base_includedir}/ap/unix	\
 -I ${abi_base_includedir}/impexp/xp	\
 -I ${abi_base_includedir}/impexp/unix"

ABIWORD_CFLAGS="${ABIWORD_CFLAGS} ${abi_sub_includes}"
AC_MSG_RESULT($ABIWORD_CFLAGS)

AC_SUBST(ABIWORD_CFLAGS)
AC_SUBST(ABIWORD_LIBS)

dnl check for python
AM_PATH_PYTHON(2.3)
AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR(could not find Python headers)])

dnl check for pygtk
PKG_CHECK_MODULES(PYGTK, pygtk-2.0)
AC_SUBST(PYGTK_CFLAGS)
AC_PATH_PROG(PYGTK_CODEGEN, pygtk-codegen-2.0, no)
if test "x$PYGTK_CODEGEN" = xno; then
  AC_MSG_ERROR(could not find pygtk-codegen-2.0 script)
fi


dnl =======================================================================================

AC_OUTPUT([
Makefile
src/Makefile
])

dnl ===========================================================================================
echo "

	prefix:                         ${prefix}
	compiler:                       ${CC}
"
