
AC_INIT(pyabiword, 0.7.8)
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_DISABLE_STATIC
AC_PROG_LIBTOOL
AC_STDC_HEADERS
AM_PROG_LIBTOOL
AC_C_CONST

abi_pkg='abiword-2.7 >= 2.7.0'
PKG_CHECK_MODULES(ABIWORD, "$abi_pkg")
AC_SUBST(ABIWORD_CFLAGS)
AC_SUBST(ABIWORD_LIBS)

dnl check for python
AM_PATH_PYTHON(2.3)
AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR(could not find Python headers)])

dnl check for pygtk
PKG_CHECK_MODULES(PYGTK, pygtk-2.0)
AC_SUBST(PYGTK_CFLAGS)
AC_PATH_PROG(PYGTK_CODEGEN, pygtk-codegen-2.0, no)
if test "x$PYGTK_CODEGEN" = xno; then
  AC_MSG_ERROR(could not find pygtk-codegen-2.0 script)
fi


dnl =======================================================================================

AC_OUTPUT([
Makefile
src/Makefile
])

dnl ===========================================================================================
echo "

	prefix:                         ${prefix}
	compiler:                       ${CC}
"
